force-app/main/default/objects/Eligibility_Rule__c/Eligibility_Rule__c.object-meta.xml
<CustomObject>
    <description>A set of rules for an employer group that determines when new employees are eligible for benefits.</description>
    <label>Eligibility Rule</label>
    <nameField>
        <label>Eligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>