force-app/main/default/objects/Eligibility_Rule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eligibility Rules</relationshipLabel>
    <relationshipName>Eligibility_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>