force-app/main/default/objects/Eligibility_Rule__c/fields/Child_ren__c.field-meta.xml
<CustomField>
    <fullName>Child_ren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child(ren)</label>
    <type>Checkbox</type>
</CustomField>