force-app/main/default/objects/Eligibility_Rule__c/fields/Coverage_Termination__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Termination__c</fullName>
    <label>Coverage Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date of Termination</fullName>
            </value>
            <value>
                <fullName>End of Month following Date of Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>