force-app/main/default/objects/Eligibility_Rule__c/fields/Definition_of_Eligible_Employee__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Eligible_Employee__c</fullName>
    <label>Definition of Eligible Employee</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time 30 Hours per Week</fullName>
            </value>
            <value>
                <fullName>Full-Time 32 Hours per Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>