force-app/main/default/objects/Eligibility_Rule__c/fields/Spouse_or_Domestic_Partner__c.field-meta.xml
<CustomField>
    <fullName>Spouse_or_Domestic_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse or Domestic Partner</label>
    <type>Checkbox</type>
</CustomField>