force-app/main/default/objects/Eligibility_Rule__c/fields/Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period__c</fullName>
    <label>Waiting Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date of Hire</fullName>
            </value>
            <value>
                <fullName>First of the Month Following Date of Hire</fullName>
            </value>
            <value>
                <fullName>First of the Month Following 30 Days</fullName>
            </value>
            <value>
                <fullName>First of the Month Following 60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>